--- a/Slicing.ipynb
+++ b/Slicing.ipynb
@@ -21,21 +21,10 @@
     },
     "colab": {
       "name": "Slicing.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Amarasinghe-Oshadha/extra/blob/master/Slicing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -81,11 +70,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wdq-fBHTdprE",
-        "outputId": "a615213b-254b-4f21-abe4-0f2176c9fe75",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wdq-fBHTdprE",
+        "outputId": "a615213b-254b-4f21-abe4-0f2176c9fe75"
       },
       "source": [
         "#Reads it in\n",
@@ -132,12 +121,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9ThpmITGfOnL",
-        "outputId": "cdcea456-b8e0-4872-ec06-12bdbbd4d2ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 283
-        }
+        },
+        "id": "9ThpmITGfOnL",
+        "outputId": "cdcea456-b8e0-4872-ec06-12bdbbd4d2ca"
       },
       "source": [
         "for i in range(3):\n",
@@ -167,12 +156,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "T7QoZU1WhlhY",
-        "outputId": "e8748c0c-7fcd-44e2-f056-5af00de81cac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 285
-        }
+        },
+        "id": "T7QoZU1WhlhY",
+        "outputId": "e8748c0c-7fcd-44e2-f056-5af00de81cac"
       },
       "source": [
         "#Average for each city\n",
@@ -212,12 +201,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y_pNE_pwhldQ",
-        "outputId": "6b46ad9e-73c3-47fb-e716-a48d528416ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
-        }
+        },
+        "id": "Y_pNE_pwhldQ",
+        "outputId": "6b46ad9e-73c3-47fb-e716-a48d528416ac"
       },
       "source": [
         "average = np.zeros(12)\n",
